# stripe-tax-reporter

./: .gitignore  ANNOUNCEMENT.md  CLAUDE.md  CROSS_PLATFORM_BUILDS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release-binaries.yml
src/: lib.rs  main.rs
src/report/: formatter.rs  generator.rs  mod.rs  quarter.rs
src/stripe/: client.rs  mod.rs  models.rs
